deployments/openshift/apps/dnotam-consumer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dnotam-consumer
  namespace: swim-sfg-observability
  labels:
    app: dnotam-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dnotam-consumer
  template:
    metadata:
      labels:
        app: dnotam-consumer
    spec:
      containers:
        - name: dnotam-consumer
          image: image-registry.openshift-image-registry.svc:5000/swim-sfg-observability/dnotam-consumer:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 256Mi
              cpu: 500m
