deployments/openshift/apps/dnotam-publisher.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dnotam-publisher
  namespace: swim-sfg-observability
  labels:
    app: dnotam-publisher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dnotam-publisher
  template:
    metadata:
      labels:
        app: dnotam-publisher
    spec:
      containers:
        - name: dnotam-publisher
          image: image-registry.openshift-image-registry.svc:5000/swim-sfg-observability/dnotam-publisher:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 768Mi
              cpu: 1000m
---
apiVersion: v1
kind: Service
metadata:
  name: dnotam-publisher
  namespace: swim-sfg-observability
spec:
  selector:
    app: dnotam-publisher
  ports:
    - port: 8080
      targetPort: 8080
